[tool.poetry]
name = "test-pcap-parser"
version = "0.1.0"
description = ""
authors = ["Maximilian Stabel <mstabel@ethz.ch>"]
readme = "README.md"
packages = [{ include = "test_pcap_parser" }]

[tool.poetry.dependencies]
python = "^3.11"
scapy = { extras = ["complete"], version = "^2.5.0rc3" }
pyshark = "^0.5.3"
dpkt = "^1.9.8"
pypacker = "^5.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
rope = "^1.3.0"
pytest = "^7.1.3"
pylint = "^2.15.4"
pytest-black = "^0.3.12"
pytest-cov = "^4.0.0"
pytest-xdist = "^2.5.0"
pytest-mock = "^3.10.0"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
plugins = "numpy.typing.mypy_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
